[package]
name = "mlua-release-test"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]

[dependencies]
mlua = { version = "0.6.5", features = ["async", "macros", "module", "serialize"] }
