[package]
name = "mlua-release-test"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]

[dependencies]
mlua = { git = "https://github.com/khvzak/mlua.git", rev = "ebf296fdd99c6a27658315fe80b828ca9ae83214", features = ["async", "macros", "module", "serialize"] }
